--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div style="text-align: right;" class="p-3 collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link text" href="#showreel">SHOW REEL</a>
-            <a class="nav-item nav-link" href="#contact">CONTACT</a>
+            <a class="nav-item nav-link" href="#contact">CONTACT</a> 
           </div>
         </div>
      
@@ -36,15 +36,15 @@
 
 
       <section>
-        <div class="pb-3">
-        <img src="https://www.adobe.com/content/dam/cc/us/en/creativecloud/design/discover/pixel-art/desktop/pixelart_P1_900x420.jpg.img.jpg" style="width: 100%;" class="img-fluid" alt="Responsive image">
+        <div class="p-3">
+        <img src="https://i.ibb.co/DzfgsnS/photo-2022-06-14-11-24-08.jpg" style="width: 100%;" class="img-fluid" alt="Responsive image">
       </div>
       </section>
    
       <section id="showreel">
         <div class="card-group">
           <div class="card">
-            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFDd1qV-iUGgcRovGOX4NGGvf3aCOjI2i9-w&usqp=CAU" alt="Card image cap">
+            <img class="card-img-top" src="https://i.ibb.co/P9bbP3t/1623871300.gif" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -52,7 +52,7 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_iSu1zW8C9hhcpfolsSEW4G0YkGo2_iFBsQ&usqp=CAU" alt="Card image cap">
+            <img class="card-img-top" src="https://i.ibb.co/XF1qftk/1623871300-2.gif" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -115,6 +115,7 @@
           </div>
         </div>
       </section>
+      
 
     <!-- Optional JavaScript; choose one of the two! -->
 
